@@ -7,7 +7,12 @@ namespace DefconNull.WorldActions.DeliveryMethods;
 
 public abstract class DeliveryMethod
 {
-	public abstract Tuple<bool,bool, string>  CanPerform(Unit actor, WorldObject target,int dimension = -1);
+	public abstract Tuple<bool, string>  CanPerform(Unit actor, WorldObject target,int dimension = -1);
+
+	public virtual Tuple<bool, string> IsRecommendedToPerform(Unit actor, WorldObject target, int dimension = -1)
+	{
+		return CanPerform(actor, target, dimension);
+	}
 
 	//do NOT convert this to old system, keep sequence actions for things like breaking windows with throwables
 	public List<SequenceAction> ExectuteAndProcessLocation(Unit actor,ref WorldObject? target)
@@ -21,4 +26,5 @@ public abstract class DeliveryMethod
 	public abstract float GetOptimalRangeAI(float margin);
 
 
+	
 }
