@@ -7,9 +7,9 @@ namespace DefconNull.WorldActions.DeliveryMethods;
 
 public class ImmideateDelivery : DeliveryMethod
 {
-	public override Tuple<bool,bool, string>  CanPerform(Unit actor, WorldObject target, int dimension = -1)
+	public override Tuple<bool, string>  CanPerform(Unit actor, WorldObject target, int dimension = -1)
 	{
-		return new Tuple<bool,bool, string>(true,true, "");
+		return new Tuple<bool, string>(true, "");
 	}
 	public override List<SequenceAction> ExectuteAndProcessLocationChild(Unit actor,ref WorldObject target)
 	{
