@@ -249,25 +249,31 @@ public class Shootable : Effect
 		return p;
 	}
 	
-	protected override Tuple<bool,bool, string>  CanPerformChild(Unit actor, WorldObject target, int dimension = -1)
+	protected override Tuple<bool, string>  CanPerformChild(Unit actor, WorldObject target, int dimension = -1)
 	{
 		if(Equals(actor.WorldObject, target))
 		{
-			return new Tuple<bool,bool, string> (false,false,"You can't shoot yourself!");
+			return new Tuple<bool, string> (false,"You can't shoot yourself!");
+		}
+		return new Tuple<bool, string> (true,"");
+	}
+	protected override Tuple<bool, string> IsRecommendedToPerformChild(Unit actor, WorldObject target, int dimension = -1)
+	{
+		var canPerform = CanPerformChild(actor, target, dimension);
+		if (!canPerform.Item1)
+		{
+			return canPerform;
 		}
 		var p = GenerateProjectile(actor, target,dimension);
-
 		if (p.Result.hit)
 		{
 			var hitobj = PseudoWorldManager.GetObject(p.Result.HitObjId,dimension);
 			if (hitobj == null || hitobj!.Type.Edge || hitobj.TileLocation.Position != (Vector2Int)p.Result.EndPoint)
 			{
-				return new Tuple<bool,bool, string> (true,false,"Can't hit target");
+				return new Tuple<bool, string> (false,"Can't hit target");
 			}
 		}
-
-
-		return new Tuple<bool,bool, string> (true,true,"");
+		return new Tuple<bool, string> (true,"");
 	}
 
 	protected override List<SequenceAction> GetConsequencesChild(Unit actor, WorldObject target,int dimension = -1)
